--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <h1> Alati za razvoj, kolaboraciju i objavljivanje </h1>
 
 <body>
-      <p>Vezba za Assigment </p>
+      <p>Vezba za Assigment </p>\
+      <p>Vezba 1</p>  
 <ul>
         <li> Vezba 1</li>
        <li>Vezba 2</li>
