--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<html>
-    
-<h1> Alati za razvoj, kolaboraciju i objavljivanje </h1>
+<!DOCTYPE html>
 
+<html>
+      <head>
+            <title>Test</title>
+      </head>
+            <h1> Alati za razvoj, kolaboraciju i objavljivanje </h1>
 <body>
       <p>Vezba za Assigment </p>\
       <p>Vezba 1</p>  
 <ul>
         <li> Vezba 1</li>
-       <li>Vezba 2</li>
+        <li>Vezba 2</li>
 </ul>
 </body>
 </html>
