--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
       </head>
             <h1> Alati za razvoj, kolaboraciju i objavljivanje </h1>
 <body>
-      <p>Vezba za Assigment </p>\
-      <p>Vezba 1</p>  
+      <p>Vezba za Assigment</p>
 <ul>
         <li> Vezba 1</li>
-        <li>Vezba 2</li>
+        <li> Vezba 2</li>
 </ul>
 </body>
 </html>
