--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
       <p>Vezba za Assigment</p>
 <ul>
-        <li> Vezba 1</li>
-        <li> Vezba 2</li>
+        <li style="color: aqua;"> Vezba 1</li>
+        <li style="color: black;"> Vezba 2</li>
+        <li style="color: blue;">Vezba 3</li>
 </ul>
 </body>
 </html>
